# MuseTalk

./: .tool-versions  main.py  pyproject.toml
musetalk/: inference.py
musetalk/utils/: preprocessing.py  utils.py
musetalk/utils/face_detection/: api.py
musetalk/utils/face_parsing/: __init__.py
