[project]
name = "musetalk"
version = "0.1.0"
description = "Metaphysics MuseTalk implementation"
authors = [
    { name = "Sergiu Kopcsa", email = "sergiu.kopcsa.dev@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "openmim>=0.3.9",
    "diffusers==0.30.2",
    "accelerate==0.28.0",
    "numpy>=1.26.0,<2.0.0",
    "tensorflow==2.15.0",
    "tensorboard==2.15.0",
    "opencv-python-headless>=4.8.0,<5.0.0",
    "soundfile==0.12.1",
    "transformers==4.39.2",
    "huggingface_hub==0.30.2",
    "librosa==0.10.1",
    "einops==0.8.1",
    "gradio==5.24.0",
    "gdown",
    "requests",
    "imageio[ffmpeg]",
    "omegaconf",
    "ffmpeg-python",
    "moviepy",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "mmdet @ git+https://github.com/Metaphysic-ai/mmdetection.git@88f916cafba6688392c75873f890cc49a8d86965",
    "mmpose==1.3.2",
    "mmengine>=0.10.7,<0.11.0",
    "mmcv @ https://download.openmmlab.com/mmcv/dist/cu121/torch2.4.0/mmcv-2.2.0-cp311-cp311-manylinux1_x86_64.whl",
    'onnxruntime (>=1.14.1,<2.0.0) ; sys_platform == "darwin" and platform_machine == "x86_64"',
    'onnxruntime (>=1.16.0,<2.0.0) ; sys_platform == "darwin" and platform_machine == "arm64"',
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "musetalk" },
    { include = "scripts" }
]

[tool.poe.tasks]
postinstall = "mim install mmcv==2.1.0"
